; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_locks_i386.c_lck_mtx_update_miss.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_locks_i386.c_lck_mtx_update_miss.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._lck_mtx_ext_ = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct._lck_mtx_ext_*, i32*)* @lck_mtx_update_miss to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lck_mtx_update_miss(%struct._lck_mtx_ext_* %0, i32* %1) #0 {
  %3 = alloca %struct._lck_mtx_ext_*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store %struct._lck_mtx_ext_* %0, %struct._lck_mtx_ext_** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct._lck_mtx_ext_*, %struct._lck_mtx_ext_** %3, align 8
  %7 = getelementptr inbounds %struct._lck_mtx_ext_, %struct._lck_mtx_ext_* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @lck_mtx_inc_stats(i32* %10)
  ret void
}

declare dso_local i32 @lck_mtx_inc_stats(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
